# gitmit

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  build.py  gitmit.py  pyproject.toml  requirements.txt
.zed/: settings.json
src/gitmit/: __init__.py
src/gitmit/llms/: __init__.py  googlellm.py  ollamallm.py  openrouterllm.py
src/gitmit/resources/: analyzer.py  files.py  llms.py  prompts.py  types.py
src/gitmit/resources/.prompts/: commit_system.txt  major_changes.txt  medium_changes.txt  resume_changes.txt  small_changes.txt
src/gitmit/services/: config.py  database.py  git.py
src/gitmit/tools/: analyze.py  commit.py  config.py  init.py  merge.py  update.py  versioning.py
src/gitmit/utils/: args.py  gitignore.py  terminal.py
src/llms/: __init__.py  googlellm.py  ollamallm.py
src/resources/: files.py  llms.py  types.py
src/services/: config.py  database.py  git.py
src/tools/: commit.py  init.py  update.py
src/utils/: args.py  terminal.py
